header fix on narrow widths

--- a/src/styles/partials/media.less
+++ b/src/styles/partials/media.less
@@ -345,14 +345,17 @@
       }
       .sub-lead {
         /*font-size: 28.5px;*/
-        font-size: 8.5vw;
+        font-size: 6.5vw;
         /*line-height: 36.5px;*/
-        line-height: 9.5vw;
+        line-height: 7.5vw;
         margin-bottom: 21px;
         .popup-stroke {
           box-shadow: inset 0px -5px 0px @color-accent;
           /*line-height: 30px;*/
-          line-height: 7vw;
+          line-height: 6vw;
+        }
+        br {
+          /*display: none;*/
         }
       }
       .sub-lead-text {
@@ -754,7 +757,7 @@
       }
       .sub-lead {
         .popup-stroke {
-          line-height: 8vw;
+          line-height: 6vw;
         }
       }
     }
